--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(1.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(1.jpeg);
     height: 100vh;
     background-size: cover;
     background-position: center;
