--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,7 +24,7 @@ html{
 }
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(1.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(1.jpeg);
     height: 100vh;
     background-size: cover;
     background-position: center;
