--- a/budhha.css
+++ b/budhha.css
@@ -9,7 +9,7 @@
     height: 100vh;
     width: 100%;
     background-color: #000000;
-    background-image: url(./styles/budhha.jpg);
+    background-image: url(./budhha.jpg);
     background-position: center;
     background-size: cover;
 }
